Fixed spacing on gallery collage

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -80,7 +80,7 @@ a:hover {
 .kg-gallery-row {
   display: flex;
   max-width: 100%;
-  padding: 4px 0;
+  padding: 1px 0;
 }
 
 .kg-gallery-image {
